Improved replay timeline and improved various performance issues

--- a/LoRWatcher/Pages/Components/TotalStats.razor
+++ b/LoRWatcher/Pages/Components/TotalStats.razor
@@ -1,6 +1,7 @@
 ﻿@namespace LoRWatcherComponents
 
-@using LoRWatcher.Stores
+@using LoRWatcher.Stores;
+@using LoRWatcher.Utils;
 @using System.Threading;
 
 
