Fixed issue with live update if UI had not been loaded before finishing a game and updated total stats component on game finish too

--- a/LoRWatcher/Pages/Index.razor
+++ b/LoRWatcher/Pages/Index.razor
@@ -77,10 +77,12 @@
         {
             await this.UpdateDataAsync();
 
+#pragma warning disable CS4014
             InvokeAsync(() =>
             {
                 StateHasChanged();
             });
+#pragma warning restore CS4014
         });
     }
 
