--- a/LoRWatcher/Pages/Components/MatchGrid.razor
+++ b/LoRWatcher/Pages/Components/MatchGrid.razor
@@ -79,10 +79,12 @@
         {
             this.matchReports = await this.watcherDataStore.GetMatchReportsAsync(this.skip, RazorConstants.PageSize, CancellationToken.None);
 
+#pragma warning disable CS4014
             InvokeAsync(() =>
             {
                 StateHasChanged();
             });
+#pragma warning restore CS4014
         });
     }
 
