--- a/LoRWatcher/Pages/Components/TotalStats.razor
+++ b/LoRWatcher/Pages/Components/TotalStats.razor
@@ -1,9 +1,11 @@
 ﻿@namespace LoRWatcherComponents
 
+@using LoRWatcher.Events
 @using LoRWatcher.Stores;
 @using LoRWatcher.Utils;
 @using System.Threading;
 
+@inject IWatcherEventHandler watcherEventHandler
 
 <div Class="col-4" Style="text-align: center">
     <div>
@@ -18,6 +20,8 @@
 </div>
 
 @code {
+    private const string Source = "TotalStats";
+
     private DoughnutChart<int> winsLossesChart;
 
     private object winsLossesChartOptions = new
@@ -37,6 +41,24 @@
 
     [Parameter]
     public MatchReportMetadata MatchReportMetadata { get; set; }
+
+    protected override void OnInitialized()
+    {
+        this.RegisterEvents();
+    }
+
+    private void RegisterEvents()
+    {
+        this.watcherEventHandler.TryAddEvent(WatcherEvents.GameFinished, Source, () =>
+        {
+#pragma warning disable CS4014
+            InvokeAsync(() =>
+            {
+                StateHasChanged();
+            });
+#pragma warning restore CS4014
+        });
+    }
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
