--- a/LoRWatcher/Pages/Index.razor
+++ b/LoRWatcher/Pages/Index.razor
@@ -31,10 +31,13 @@
             <div Class="col-4">
                 <h1><b>@this.matchReportMetadata.PlayerName</b></h1>
             </div>
-            <div Class="col-8">
+            <div Class="col-6">
                 <Row>
                     <TotalStats MatchReportMetadata="this.matchReportMetadata" />
                 </Row>
+            </div>
+            <div Class="col-2">
+                <ClientStatus />
             </div>
         </Row>
         <Row>
