--- a/LoRWatcher/Pages/Index.razor
+++ b/LoRWatcher/Pages/Index.razor
@@ -31,12 +31,12 @@
             <div Class="col-4" style="display: flex;">
                 <h1><b>@this.matchReportMetadata.PlayerName</b></h1>
                 <div>
-                    <a Style="display: flex; cursor: pointer; width: 20px; height: 20px; border-style: solid; border-color: rgba(0, 0, 0, 0.1); border-width: 1px; border-radius: 2px; margin: 2px 5px 2px 5px; padding: 5px">
+                    <a onclick="@(async () => await ShowModalAsync())" Style="display: flex; cursor: pointer; width: 20px; height: 20px; border-style: solid; border-color: rgba(0, 0, 0, 0.1); border-width: 1px; border-radius: 2px; margin: 2px 5px 2px 5px; padding: 5px">
                         <Icon Style="color: rgba(0,0,0,0.75); font-size: 8px;" Name="@("fa-wrench")" />
-                        </a>
+                    </a>
                     <a Style="display: flex; cursor: pointer; width: 20px; height: 20px; border-style: solid; border-color: rgba(0, 0, 0, 0.1); border-width: 1px; border-radius: 2px; margin: 2px 5px 5px 5px; padding: 5px">
                         <Icon Style="color: rgba(0,0,0,0.75); font-size: 8px;" Name="@("fa-sync")" />
-                        </a>
+                    </a>
                 </div>
             </div>
             <div Class="col-6">
@@ -56,6 +56,29 @@
     }
 </Container>
 
+<Modal @ref="modalRef">
+    <ModalContent Size="ModalSize.Small" Centered>
+        <ModalBody>
+            <Row>
+                <h4>@this.matchReportMetadata.PlayerName</h4><a>#</a><h5>EUW</h5>
+            </Row>
+        </ModalBody>
+        <ModalFooter>
+            <div Class="col-12" style="flex: auto">
+                <Row>
+                    <div Class="col-6" Style="justify-content: left;">
+                        <Button Color="Color.Secondary">Close</Button>
+                    </div>
+                    <div Class="col-6" Style="display: grid; justify-content: right;">
+
+                        <Button Color="Color.Primary">Save</Button>
+                    </div>
+                </Row>
+            </div>
+        </ModalFooter>
+    </ModalContent>
+</Modal>
+
 @code {
     private const string Source = "Home";
 
@@ -63,11 +86,18 @@
 
     private IEnumerable<MatchReport> matchReports;
 
+    private Modal modalRef;
+
     protected override async Task OnInitializedAsync()
     {
         this.RegisterEvents();
 
         await this.UpdateDataAsync();
+    }
+
+    private async Task ShowModalAsync()
+    {
+        await modalRef.Show();
     }
 
     private void RegisterEvents()
